[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Game_HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 45
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="Game_HUD" type="Node2D"]
z_index = 2
script = ExtResource( 2 )

[node name="GameOver_HUD" type="Node2D" parent="."]
visible = false

[node name="GameOver_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 192.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.415686, 0.415686, 1 )
text = "You coulldn't reach the planet, your ship destroyed."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 220.0
margin_top = 280.0
margin_right = 420.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1
valign = 1

[node name="Fail_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 220.0
margin_top = 322.08
margin_right = 420.0
margin_bottom = 362.08
custom_fonts/font = SubResource( 3 )
text = "Fail: 0"
align = 1
valign = 1

[node name="Restart_btn" type="Button" parent="GameOver_HUD"]
margin_left = 272.0
margin_top = 400.0
margin_right = 368.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 4 )
text = "Try Again"

[node name="Paused_HUD" type="Node2D" parent="."]
pause_mode = 2
visible = false

[node name="Panel" type="Panel" parent="Paused_HUD"]
modulate = Color( 0.705882, 0.192157, 1, 1 )
margin_left = 192.0
margin_top = 192.0
margin_right = 448.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused_lbl" type="Label" parent="Paused_HUD"]
margin_left = 200.0
margin_top = 208.215
margin_right = 440.0
margin_bottom = 268.215
custom_fonts/font = SubResource( 5 )
text = "GAME PAUSED"
align = 1
valign = 1

[node name="Continue_btn" type="Button" parent="Paused_HUD"]
margin_left = 256.0
margin_top = 312.0
margin_right = 384.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 7 )
text = "Continue Game"

[node name="Pause_btn" type="Button" parent="."]
margin_left = 582.0
margin_top = 6.18594
margin_right = 632.0
margin_bottom = 46.1859
custom_fonts/font = SubResource( 6 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GameOver_HUD/Restart_btn" to="." method="_on_Restart_btn_pressed"]
[connection signal="pressed" from="Paused_HUD/Continue_btn" to="." method="_on_Continue_btn_pressed"]
[connection signal="pressed" from="Pause_btn" to="." method="_on_Pause_btn_pressed"]
